fix easyautocomplete search fields text too dark on dark theme

--- a/public_html/templates/default/css/source/dark.scss
+++ b/public_html/templates/default/css/source/dark.scss
@@ -406,3 +406,8 @@ svg text {fill: white;}
 	border-color: transparent #222222 transparent transparent;
 	box-sizing: border-box;
   }
+
+  .easy-autocomplete input
+  {
+	  color: #eee;
+  }
